# web_spider

./: .clang-format  .gitignore  README.md  config.yaml  docker-compose.yaml  go.mod
cmd/: main.go
internal/app/: app.go  wiki_spider.go
internal/config/: config.go
internal/db/: mongo.go
internal/models/: models.go
internal/url_queue/: queue.go  url_queue.go
robot/: config.yaml  go.sum
robot/cmd/: main.go
robot/internal/app/: spider.go
robot/internal/config/: config.go
robot/internal/db/: mongo.go
robot/internal/models/: models.go
robot/internal/utils/: utils.go
searcher/: CMakeLists.txt  dump.idx
searcher/include/: db_downloader.h  index.h  indexator.h  searcher.h  tokenizer.h  utility.h
searcher/lab3/: cipf.py  main.cpp  searcher.cpp
searcher/src/: db_downloader.cpp  index.cpp  indexator.cpp  searcher.cpp  tokenizer.cpp
searcher/tests/: test_indexator.cpp  test_mapped_index.cpp  test_searcher.cpp  test_set_logic.cpp  test_stemmer.cpp  test_tokenizer.cpp
